--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -104,7 +104,7 @@ jobs:
         -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl
         -DCH_ODBC_RUNTIME_LINK_STATIC=${{ fromJSON('{"static-runtime": "ON", "dynamic-runtime": "OFF"}')[matrix.runtime_link] }}
         -DCH_ODBC_PREFER_BUNDLED_THIRD_PARTIES=${{ fromJSON('{"bundled-third-parties": "ON", "system-third-parties": "OFF"}')[matrix.third_parties] }}
-        -DTEST_DSN_LIST="ClickHouse DSN (ANSI);ClickHouse DSN (Unicode);ClickHouse DSN (ANSI, RBWNAT)"
+        -DTEST_DSN_LIST="Proton DSN (ANSI);Proton DSN (Unicode);Proton DSN (ANSI, RBWNAT)"
 
     - name: Build
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }}
@@ -156,15 +156,15 @@ jobs:
     #     DebugFile = ${{ github.workspace }}/run/odbc-driver-manager-debug.log
 
     #     [ODBC Drivers]
-    #     ClickHouse ODBC Driver (ANSI)    = Installed
-    #     ClickHouse ODBC Driver (Unicode) = Installed
+    #     Proton ODBC Driver (ANSI)    = Installed
+    #     Proton ODBC Driver (Unicode) = Installed
 
-    #     [ClickHouse ODBC Driver (ANSI)]
+    #     [Proton ODBC Driver (ANSI)]
     #     Driver     = ${{ github.workspace }}/build/driver/libclickhouseodbc.so
     #     Setup      = ${{ github.workspace }}/build/driver/libclickhouseodbc.so
     #     UsageCount = 1
 
-    #     [ClickHouse ODBC Driver (Unicode)]
+    #     [Proton ODBC Driver (Unicode)]
     #     Driver     = ${{ github.workspace }}/build/driver/libclickhouseodbcw.so
     #     Setup      = ${{ github.workspace }}/build/driver/libclickhouseodbcw.so
     #     UsageCount = 1
@@ -178,27 +178,27 @@ jobs:
     #     DebugFile = ${{ github.workspace }}/run/odbc-driver-manager-debug.log
 
     #     [ODBC Data Sources]
-    #     ClickHouse DSN (ANSI)         = ClickHouse ODBC Driver (ANSI)
-    #     ClickHouse DSN (Unicode)      = ClickHouse ODBC Driver (Unicode)
-    #     ClickHouse DSN (ANSI, RBWNAT) = ClickHouse ODBC Driver (ANSI)
+    #     Proton DSN (ANSI)         = Proton ODBC Driver (ANSI)
+    #     Proton DSN (Unicode)      = Proton ODBC Driver (Unicode)
+    #     Proton DSN (ANSI, RBWNAT) = Proton ODBC Driver (ANSI)
 
-    #     [ClickHouse DSN (ANSI)]
-    #     Driver        = ClickHouse ODBC Driver (ANSI)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (ANSI)
+    #     [Proton DSN (ANSI)]
+    #     Driver        = Proton ODBC Driver (ANSI)
+    #     Description   = Test DSN for Proton ODBC Driver (ANSI)
     #     Url           = http://${CLICKHOUSE_SERVER_IP}
     #     DriverLog     = yes
     #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
 
-    #     [ClickHouse DSN (Unicode)]
-    #     Driver        = ClickHouse ODBC Driver (Unicode)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (Unicode)
+    #     [Proton DSN (Unicode)]
+    #     Driver        = Proton ODBC Driver (Unicode)
+    #     Description   = Test DSN for Proton ODBC Driver (Unicode)
     #     Url           = http://${CLICKHOUSE_SERVER_IP}
     #     DriverLog     = yes
     #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver-w.log
 
-    #     [ClickHouse DSN (ANSI, RBWNAT)]
-    #     Driver        = ClickHouse ODBC Driver (ANSI)
-    #     Description   = Test DSN for ClickHouse ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
+    #     [Proton DSN (ANSI, RBWNAT)]
+    #     Driver        = Proton ODBC Driver (ANSI)
+    #     Description   = Test DSN for Proton ODBC Driver (ANSI) that uses RowBinaryWithNamesAndTypes as data source communication default format
     #     Url           = http://${CLICKHOUSE_SERVER_IP}/query?default_format=RowBinaryWithNamesAndTypes
     #     DriverLog     = yes
     #     DriverLogFile = ${{ github.workspace }}/run/clickhouse-odbc-driver.log
