--- a/tests-pyodbc/config.yaml
+++ b/tests-pyodbc/config.yaml
@@ -10,3 +10,9 @@ invalid_data_source:
   database: 'system'
   uid: 'system'
   pwd: 'pasword'
+valid_data_source:
+  driver: 'Proton ODBC Driver (Unicode)'
+  url: 'http://localhost:8123'
+  database: 'system'
+  uid: 'system'
+  pwd: 'sys@t+'
